--- a/data/components/18F/CP-Policy/component.yaml
+++ b/data/components/18F/CP-Policy/component.yaml
@@ -7,7 +7,7 @@ references:
 satisfies:
 - control_key: CP-1
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 18F Policy
   standard_key: NIST-800-53
 schema_version: 2.0
