--- a/data/components/18F/MP-Policy/component.yaml
+++ b/data/components/18F/MP-Policy/component.yaml
@@ -3,7 +3,7 @@ name: Media Protection Policy for 18F
 satisfies:
 - control_key: MP-1
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 18F Policy
   standard_key: NIST-800-53
 schema_version: 2.0
