--- a/data/components/18F/SI-Policy/component.yaml
+++ b/data/components/18F/SI-Policy/component.yaml
@@ -4,13 +4,13 @@ satisfies:
 - control_key: SI-1
   covered_by:
   - verification_key: POLICY_DOC
-  implementation_status: null
+  implementation_status: none
   narrative: 18F Policy
   standard_key: NIST-800-53
 - control_key: SI-4
   covered_by:
   - verification_key: POLICY_DOC
-  implementation_status: null
+  implementation_status: none
   narrative:
     a: "The 18F DevOps and SecOps teams monitors the Cloud.Gov information system\
       \ to detect potential attacks and intrusions from internal and external sources\
@@ -58,7 +58,7 @@ satisfies:
 - control_key: SI-2
   covered_by:
   - verification_key: POLICY_DOC
-  implementation_status: null
+  implementation_status: none
   narrative:
     a: '18F identifies all system flaws related to Cloud.gov, reports system flaws
       to information system owners, Authorizing officials, DevOps and SecOp  and corrects
