--- a/data/components/AWS/CloudFormation/component.yaml
+++ b/data/components/AWS/CloudFormation/component.yaml
@@ -7,7 +7,7 @@ references:
 satisfies:
 - control_key: CM-2
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'DevOps maintain baseline configurations for VPC, EBS, EC2 instances
     and AMIs. AWS Cloud Formation templates help 18F maintain a strict configuration
     management scheme of the cloud infrastructure. If an error or misconfiguration
@@ -32,7 +32,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: CM-3
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: '- 18F provisions its infrastructure with AWS CloudFormation, the AWS
     CloudFormation template describes exactly what resources are provisioned and their
     settings. Because these templates are text files, 18F can simply track differences
