--- a/data/components/CloudFoundry/CloudController/component.yaml
+++ b/data/components/CloudFoundry/CloudController/component.yaml
@@ -4,7 +4,7 @@ satisfies:
 - control_key: SA-11 (1)
   covered_by:
   - verification_key: STATIC_CODE_ANALYSIS
-  implementation_status: implemented
+  implementation_status: complete
   narrative: 'The Cloud Controller uses CodeClimate as it''s primary static code analysis
     tool. The results of the test are publicly avaiable.
 
@@ -15,7 +15,7 @@ satisfies:
   - verification_key: CF_ROLES
   - verification_key: CF_ROLES_CODE
   - verification_key: CF_ROLES_CODE_SPECS
-  implementation_status: null
+  implementation_status: none
   narrative: 'Cloud.Gov uses feature flags which allows an administrator to turn on
     or off sub-sections, or features, of an application without deploying new code.
 
@@ -27,7 +27,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-5
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative:
     a: "The Cloud Controller is used to create invidual user accounts and roles within\
       \ the PaaS for separation of duty functions. The following is a list of roles\
@@ -44,7 +44,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-6 (10)
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'The Cloud.Gov platform has built-in Role based access controls (RBAC).
     This ensures that users can only view and affect the spaces for which they have
     been granted access to. It also prevents non-privileged users from executing privileged
@@ -62,7 +62,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-14
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative:
     a: 'There are no permitted actions without identification and authentication to
       Cloud.Gov. The Cloud Controller rejects any broker registration that does not
@@ -74,7 +74,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: SI-10
   covered_by: []
-  implementation_status: implemented
+  implementation_status: complete
   narrative: 'The UAA uses a Restful API with set endpoint and parameters. Users depending
     on thier authorized access can only make request to specific endpoint that activate
     specific functions that take a limited and defined set of parameters.
@@ -86,7 +86,7 @@ satisfies:
   - verification_key: CF_ROLES
   - verification_key: CF_ROLES_CODE
   - verification_key: CF_ROLES_CODE_SPECS
-  implementation_status: null
+  implementation_status: none
   narrative:
     a: 'Cloud Foundry user and role accounts are managed and maintained through the
       Cloud Controller. Cloud Foundry uses role-based access control with each role
@@ -107,7 +107,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-2 (9)
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'This control is not applicable. Group accounts are not allowed  within
     the 18F VPC and the Cloud.Gov PaaS
 
@@ -116,7 +116,7 @@ satisfies:
 - control_key: AU-3
   covered_by:
   - verification_key: EVENTS_ENDPOINT
-  implementation_status: null
+  implementation_status: none
   narrative: 'Cloud Foundry stores detailed events which can be accessed through the
     CF API. A list the events is avaiable in the API documentation.
 
