--- a/data/components/CloudFoundry/UAA/component.yaml
+++ b/data/components/CloudFoundry/UAA/component.yaml
@@ -19,7 +19,7 @@ references:
 satisfies:
 - control_key: AC-10
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'Cloud.gov does not support capability to limit active sessions and as
     a cloud-based system it was not designed to limit the number of active sessions.
 
@@ -27,7 +27,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: IA-2 (5)
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'This controls is not applicable. here are are no group accounts within
     the Cloud.Gov platform.
 
@@ -35,7 +35,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-2 (1)
   covered_by: []
-  implementation_status: true
+  implementation_status: complete
   narrative: 'Cloud.Gov uses the UAA CLI which is a semi-automated command line based
     account management system that enables operators to create, modify and deleted
     user accounts and roles within the platform. https://docs.cloudfoundry.org/adminguide/uaa-user-management.html
@@ -44,7 +44,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: IA-2 (11)
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'Cloud.Gov does not have MFA capabilities implemented. Cloud.Gov currently
     utilizes username and password for identification and authentication of non-privileged
     accounts.
@@ -53,7 +53,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: IA-2 (8)
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'Cloud.gov a limit of 5 consecutive invalid logon attempts by a user
     during a 15 minute period
 
@@ -66,7 +66,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: IA-2 (12)
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'PIV card access is Not applicable for the Cloud Foundry PaaS
 
     '
@@ -74,7 +74,7 @@ satisfies:
 - control_key: AC-11 (1)
   covered_by:
   - verification_key: CLOUDGOV_LOGIN_PAGE
-  implementation_status: null
+  implementation_status: none
   narrative: 'The Cloud.gov login page hides user passwords using asterisks, the Cloud
     Foundry along with the bosh cli also obfuscate user passwords.
 
@@ -82,7 +82,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-14
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative:
     a: 'There are no permitted actions without identification and authentication to
       Cloud.Gov. The Cloud Controller rejects any broker registration that does not
@@ -100,7 +100,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: SC-28 (1)
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: '
 
     The Cloud Foundry platform as a service does NOT create, store or process any
@@ -142,7 +142,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: SI-10
   covered_by: []
-  implementation_status: implemented
+  implementation_status: complete
   narrative: 'The UAA uses an api with set endpoint and parameters. Users depending
     on thier authorized access can only make request to specific endpoint that activate
     specific functions that take a limited and defined set of parameters.
@@ -151,7 +151,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-2 (9)
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'NA - This control is not applicable. Group accounts are not allowed  within
     the 18F VPC and the Cloud.Gov platform
 
@@ -160,7 +160,7 @@ satisfies:
 - control_key: AC-7
   covered_by:
   - verification_key: CLOUDGOV_LOGIN_PAGE
-  implementation_status: null
+  implementation_status: none
   narrative:
     a: 'Cloud.gov displays banner on the cloud.gov login page
 
@@ -174,7 +174,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: IA-2
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'The UAA is the identity management service for Cloud Foundry. Its primary
     role is as an OAuth2 provider, issuing tokens for client applications to use when
     they act on behalf of Cloud Foundry users. In collaboration with the login server,
@@ -192,21 +192,21 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-2 (5)
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'Account log out is set to 15 minutes of inactivity.
 
     '
   standard_key: NIST-800-53
 - control_key: IA-3
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'Not Applicable to Cloud Foundry
 
     '
   standard_key: NIST-800-53
 - control_key: AC-2 (2)
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'Not Applicable. Cloud.Gov does not contain any guest/anonymous, group,
     or temporary user accounts. Devops only creates individual user accounts and grants
     role based access to users within Cloud.Gov. There are no guest/anonymous, group,
@@ -216,7 +216,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-4
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: "The information system enforces approved authorizations for controlling\
     \ the flow of information within the system and between interconnected systems\
     \ based on the 18F Access Control Policy Section 3 -  Information Flow Enforcement\
@@ -235,7 +235,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-2 (10)
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'This control is not applicable. Group accounts are not allowed  within
     the 18F VPC and the Cloud.Gov PaaS
 
@@ -243,7 +243,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: IA-2 (1)
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'Cloud.Gov does not have MFA capabilities implemented. Cloud.Gov currently
     utilizes username and password for identification and authentication of non-privileged
     accounts.
@@ -252,7 +252,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-3
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: "18F follows best practices by implementing the majority of the following:\n\
     \  - Use RBAC model to restrict users\u2019 access to only what is necessary to\
     \ complete their tasks.\n  - Use a strong passphrase for both Cloud.gov user account\
@@ -262,7 +262,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: SC-13
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'As for stored data the following cryptographic mechanisms are used to
     prevent unauthorized disclosure and modification of stored data.
 
@@ -279,7 +279,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-2
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative:
     j: '# TODO
 
@@ -297,7 +297,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-11
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'A session limit of 15 minutes is implemented on inactive accounts within
     the Cloud.gov platform. All sessions are terminated after this period, but sesssion
     are not locked.
@@ -306,7 +306,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-2 (3)
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'User accounts for 18F staff are monitored monthly and are disabled after
     90 days of inactivity; this will be a manual review process every 30 days however
     the disablement will be automatic through the UAA.
@@ -319,7 +319,7 @@ satisfies:
   standard_key: NIST-800-53
 - control_key: AC-12
   covered_by: []
-  implementation_status: null
+  implementation_status: none
   narrative: 'A session limit of 15 minutes is implemented on inactive accounts within
     the Cloud.gov platform.
 
